--- a/resources/css/landing_style.css
+++ b/resources/css/landing_style.css
@@ -206,3 +206,54 @@ input[type=submit] {
     color: #fff;
     border:1px solid #cf6d17;
 }
+
+
+/*-----------------------------*/
+/* Footer*/
+/*-----------------------------*/
+
+footer{
+    background-color:#272626;
+    padding: 20px 0 30px;
+}
+.footer-nav{
+    list-style: none;
+    float:left;
+}
+
+.social-links{
+    list-style: none;
+    float:right;
+}
+
+.footer-nav li,
+.social-links li{
+    display:inline-block;
+    margin-right:20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child{
+    margin-right:0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited{
+    color:#b5b5b5;
+    text-decoration: none;
+    border:0;
+    transition:color 0.5s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active{
+    color:#666;
+}
+
+footer p{
+    color:#b5b5b5;
+    text-align: center;
+    font-size: 90%
+}
